--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
         "editor.formatOnType": false,
         "editor.insertSpaces": true,
         "editor.codeActionsOnSave": {
-          "source.organizeImports": true
+            "source.organizeImports": "explicit"
         }
     },
     "python.testing.pytestArgs": [
